Fix small prompt on mobile v2

--- a/src/jsMain/resources/styles.css
+++ b/src/jsMain/resources/styles.css
@@ -12,7 +12,7 @@ html {
 
 body {
   background-color: var(--terminal-bg);
-  font-family: var(--font-family);
+  font-family: var(--font-family), monospace;
   font-size: var(--font-size);
   margin: 0;
   padding-right: calc(var(--panel-width) + var(--resizer-width));
@@ -26,12 +26,9 @@ body {
   margin: 0.5rem;
 
   & input {
-    text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    
     background-color: var(--terminal-bg);
     color: var(--primary);
-    font-family: var(--font-family);
+    font-family: var(--font-family), monospace;
     font-size: var(--font-size);
     border: none;
     outline: none;
@@ -111,11 +108,5 @@ body.resizing {
   }
   body {
     padding-right: 0;
-  }
-}
-
-@media (max-width: 430px) {
-  :root {
-    --font-size: 0.875rem;
   }
 }
